Updating our h1 tag with our name

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Marcus W.</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
-      <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I like fast cars</p>
+      <h1>What Type?</h1>
+      <p>High Revving, Manual Transmission, Lightweight Roadsters</p>
+      <h1>What are your favorite tracks?</h1>
+      <p>Chuckwalla Valley Raceway</p>
+      <h1>What's your dream car after getting rich?</h1>
+      <p>Boxster Spyder</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>SoCal</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To buy that car above ^</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/massoh2">Github</a></li>
         </ul>
     </footer>
 </body>
