--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I like fast cars</p>
+      <p>I like fast cars.</p>
       <h1>What Type?</h1>
-      <p>High Revving, Manual Transmission, Lightweight Roadsters</p>
+      <p>High Revving, Manual Transmission, Lightweight Roadsters.</p>
       <h1>What are your favorite tracks?</h1>
-      <p>Chuckwalla Valley Raceway</p>
+      <p>Chuckwalla Valley Raceway.</p>
       <h1>What's your dream car after getting rich?</h1>
-      <p>Boxster Spyder</p>
+      <p>Boxster Spyder.</p>
       <h1>Where do you live?</h1>
-      <p>SoCal</p>
+      <p>SoCal.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>To buy that car above ^</p>
+      <p>To buy that car above ^.</p>
     </section>
 
     <footer id="footer">
