--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>About Me</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
+
 
 </head>
 
