--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Introduction</h1>
       <p>I like fast cars.</p>
       <h1>What Type?</h1>
-      <p>High Revving, Manual Transmission, Lightweight Roadsters.</p>
+      <p>RWD, High Revving, Manual Transmission, Lightweight Roadsters.</p>
       <h1>What are your favorite tracks?</h1>
       <p>Chuckwalla Valley Raceway & Buttonwillow.</p>
       <h1>What's your dream car after getting rich?</h1>
