--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>A Real Purist's Page</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/jpg" href="favicon1.jpg">
+    <link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
 
 
 </head>
